logs/ws-docutils.log
Listing '.'...
Listing './bin'...
Compiling './bin/ws_rst2html.py'...
Compiling './bin/ws_rst2latex.py'...
Compiling './bin/ws_rst2man.py'...
Compiling './bin/ws_rst2odt.py'...
Compiling './bin/ws_rst2pseudoxml.py'...
Compiling './bin/ws_sh2rst.py'...
***   File "./bin/ws_sh2rst.py", line 99
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ws_docutils'...
Listing './lib/python3.5/site-packages/ws_docutils/span'...
Listing './lib/python3.5/site-packages/ws_docutils-0.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
